Describe your changes

--- a/static/style.css
+++ b/static/style.css
@@ -75,6 +75,7 @@ li a {
   filter: blur(4px);
   transition: filter 0.2s ease-in-out;
 }
+
 .right-panel {
   margin-left: auto; 
   width: 20%;
@@ -82,4 +83,10 @@ li a {
   padding: 2px;
   text-align: center;
   font-size: medium;
+}
+
+#value-select {
+  margin-left: auto;
+  width: 200px;
+  height: auto;
 }
